Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19856

Doing an orientation change while in splitview mode and closing VKB causes QGraphicsView to be incorrectly resized.

    XMLWordPrintable

Details

    • 242db2799df091278517623b3823f0eefc0fa42e

    Description

      Steps to repro:
      1) Build and run the attached application
      2) Turn the device into landscape orientation
      3) Tap on the lineedit to launch VKB in splitscreen mode
      4) Tun the device into portrait orientation
      5) Close the VKB

      --> Observe the application only occupying ~half the screen when it should be fullscreen.

      The underlying reason is that the m_splitViewResizeBy variable in QCoeFepInputContext::resetSplitViewWidget (src/gui/inputmethod/qcoefepinputcontext_s60.cpp) was set while the device was still in landscape mode, and therefore the final size of underlying QGraphicsView will be incorrect if VKB gets closed in different orientation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes